# vahkane

./: .gitignore  Dockerfile  Makefile  PROJECT  README.md  aqua.yaml  common.mk  dune-project  go.mod  go.sum  tools.go  vahkane.opam
.github/workflows/: test.yml
api/v1/: discordinteraction_types.go  groupversion_info.go  zz_generated.deepcopy.go
cmd/: main.go
config/crd/: kustomization.yaml
config/crd/bases/: vahkane.anqou.net_discordinteractions.yaml
config/default/: kustomization.yaml  metrics_service.yaml
config/manager/: manager.yaml
config/network-policy/: allow-metrics-traffic.yaml
config/prometheus/: monitor.yaml
config/rbac/: discordinteraction_editor_role.yaml  discordinteraction_viewer_role.yaml  kustomization.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  role.yaml  role_binding.yaml  service_account.yaml
config/samples/: kustomization.yaml  v1_discordinteraction.yaml
internal/controller/: discordinteraction_controller.go  discordinteraction_controller_test.go  job_controller.go  suite_test.go
internal/discord/: client.go  mock_client.go
internal/runner/: jobenc.go  jobenc_test.go  pattern.go  pattern_test.go  runner.go
lib/: dune
test/: dune
test/e2e/: Makefile  e2e_suite.go  e2e_suite_test.go  e2e_test.go
test/e2e/testdata/: manifests-template.yaml
