opam-version: "2.0"
synopsis: "vahkane"
description: "vahkane"
maintainer: ["Ushitora Anqou"]
authors: ["Ushitora Anqou"]
license: "MIT"
tags: ["discord" "kubernetes"]
homepage: "https://github.com/ushitora-anqou/vahkane"
doc: "https://github.com/ushitora-anqou/vahkane"
bug-reports: "https://github.com/ushitora-anqou/vahkane/issues"
depends: [
  "ocaml"
  "dune" {>= "3.16"}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/ushitora-anqou/vahkane.git"
