opam-version: "2.0"
synopsis: "A discord webhook endpoint"
description: "A discord webhook endpoint"
maintainer: ["Ushitora Anqou"]
authors: ["Ushitora Anqou"]
license: "MIT"
tags: ["discord" "kubernetes"]
homepage: "https://github.com/ushitora-anqou/vahkane"
doc: "https://github.com/ushitora-anqou/vahkane"
bug-reports: "https://github.com/ushitora-anqou/vahkane/issues"
depends: [
  "ocaml" {>= "5.0"}
  "dune" {>= "3.16"}
  "odoc" {with-doc}
  "ocamlformat" {= "0.26.2" & with-dev-setup}
  "ocaml-lsp-server" {with-dev-setup}
  "ppx_deriving"
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/ushitora-anqou/vahkane.git"
