opam-version: "2.0"
synopsis: "A discord webhook endpoint"
description: "A discord webhook endpoint"
maintainer: ["Ushitora Anqou"]
authors: ["Ushitora Anqou"]
license: "MIT"
tags: ["discord" "kubernetes"]
homepage: "https://github.com/ushitora-anqou/vahkane"
doc: "https://github.com/ushitora-anqou/vahkane"
bug-reports: "https://github.com/ushitora-anqou/vahkane/issues"
depends: [
  "dune" {>= "3.16"}
  "eio"
  "eio_main"
  "ocaml" {>= "5.0"}
  "ocaml-lsp-server" {with-dev-setup}
  "ocamlformat" {= "0.26.2" & with-dev-setup}
  "odoc" {with-doc}
  "ppx_deriving"
  "yume"
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/ushitora-anqou/vahkane.git"
pin-depends:[
  [ "yume.0.1.10" "git+https://github.com/ushitora-anqou/yume.git#0.1.10" ]
]
